--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon, android:theme">
-        <activity android:name=".activitys.SplashActivity"></activity>
+        <activity android:name=".activitys.SplashActivity" />
 
         <meta-data
             android:name="design_width"
@@ -65,8 +65,8 @@
         <activity android:name=".activitys.CreatePackageActivity" />
         <activity
             android:name=".activitys.MainActivity"
-            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -76,7 +76,10 @@
         </activity>
         <activity android:name=".activitys.TransferActivity" />
         <activity android:name=".activitys.AboutUsActivity" />
-        <activity android:name=".activitys.BaseActivity"></activity>
+        <activity android:name=".activitys.BaseActivity" />
+        <activity android:name=".activitys.TrainTravelActivity" />
+        <activity android:name=".activitys.NearbySearchActivity" />
+        <activity android:name=".activitys.LandmarkTourActivity"></activity>
     </application>
 
 </manifest>
