--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,15 @@
         <activity android:name=".activitys.BaseActivity" />
         <activity android:name=".activitys.TrainTravelActivity" />
         <activity android:name=".activitys.NearbySearchActivity" />
-        <activity android:name=".activitys.LandmarkTourActivity"></activity>
+        <activity android:name=".activitys.LandmarkTourActivity" />
+        <activity android:name=".activitys.DiBiaoZhiLvActivity" />
+        <activity android:name=".activitys.TravelReminderActivity" />
+        <activity android:name=".activitys.TravelLineActivity" />
+        <activity android:name=".activitys.StationInformationActivity" />
+        <activity android:name=".activitys.TicketHotelActivity" />
+        <activity android:name=".activitys.WeatherInquiryActivity" />
+        <activity android:name=".activitys.HuiminServicePointActivity" />
+        <activity android:name=".activitys.HighSpeedCinemaActivity"></activity>
     </application>
 
 </manifest>
